--- a/Bought/Bought/Base.lproj/Main.storyboard
+++ b/Bought/Bought/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N0I-1X-jdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N0I-1X-jdF">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -43,7 +43,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="EAG-ew-5v8">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="RiN-tS-opJ">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Po2-cs-8qB">
+                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Item name" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Po2-cs-8qB">
                                 <rect key="frame" x="0.0" y="64" width="600" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -52,6 +52,11 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="WMb-t5-5lL"/>
                                 </connections>
                             </textField>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Search" id="i7E-Cw-4uc">
+                            <connections>
+                                <action selector="Search:" destination="vXZ-lx-hvc" id="bVB-cO-tWQ"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
