--- a/Bought/Bought/Base.lproj/Main.storyboard
+++ b/Bought/Bought/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N0I-1X-jdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N0I-1X-jdF">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -43,7 +43,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="EAG-ew-5v8">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="RiN-tS-opJ">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Item name" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Po2-cs-8qB">
+                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Item" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Po2-cs-8qB">
                                 <rect key="frame" x="0.0" y="64" width="600" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -62,11 +62,39 @@
                     <connections>
                         <outlet property="searchBar" destination="Po2-cs-8qB" id="fTM-De-UNJ"/>
                         <outlet property="tableView" destination="bie-Za-CpU" id="RBy-A8-hPI"/>
+                        <segue destination="iap-rX-7kq" kind="show" identifier="showWebView" id="ja4-VX-cAa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1522" y="449"/>
+            <point key="canvasLocation" x="1508" y="449"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="Mz5-am-3I7">
+            <objects>
+                <viewController id="iap-rX-7kq" customClass="WebViewController" customModule="Bought" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Vt-RF-UtO"/>
+                        <viewControllerLayoutGuide type="bottom" id="cpc-ic-96I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ADP-u3-jJU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M7l-QE-bz0">
+                                <rect key="frame" x="0.0" y="-8" width="610" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="M7l-QE-bz0" id="WnG-m9-fq6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sur-C9-LP4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2274" y="457"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5ST-hI-260">
