--- a/Bought/Bought/Base.lproj/Main.storyboard
+++ b/Bought/Bought/Base.lproj/Main.storyboard
@@ -14,11 +14,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Y0i-1c-GC5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bie-Za-CpU">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="KA9-GJ-wFz">
@@ -43,25 +43,22 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EAG-ew-5v8">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="RiN-tS-opJ">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Item" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Po2-cs-8qB">
-                                <rect key="frame" x="0.0" y="64" width="600" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="WMb-t5-5lL"/>
-                                </connections>
-                            </textField>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Search" id="i7E-Cw-4uc">
+                        <nil key="title"/>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" id="Adr-Zs-t9C">
+                            <rect key="frame" x="112.5" y="7" width="150" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <accessibility key="accessibilityConfiguration" hint="Search"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <barButtonItem key="rightBarButtonItem" title="Search" id="9xb-9s-1Ix">
                             <connections>
-                                <action selector="Search:" destination="vXZ-lx-hvc" id="bVB-cO-tWQ"/>
+                                <action selector="Search:" destination="vXZ-lx-hvc" id="JkP-eI-1sy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="searchBar" destination="Po2-cs-8qB" id="fTM-De-UNJ"/>
+                        <outlet property="searchBar" destination="Adr-Zs-t9C" id="646-l9-Hhh"/>
                         <outlet property="tableView" destination="bie-Za-CpU" id="RBy-A8-hPI"/>
                         <segue destination="iap-rX-7kq" kind="show" identifier="showWebView" id="ja4-VX-cAa"/>
                     </connections>
@@ -79,7 +76,7 @@
                         <viewControllerLayoutGuide type="bottom" id="cpc-ic-96I"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ADP-u3-jJU">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M7l-QE-bz0">
@@ -102,6 +99,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N0I-1X-jdF" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Cz-RQ-BGI">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
