--- a/Bought/Bought/Base.lproj/Main.storyboard
+++ b/Bought/Bought/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N0I-1X-jdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -109,7 +109,7 @@
                     <connections>
                         <outlet property="dollarAmountField" destination="v4m-Hw-8Bc" id="n9x-5i-4i4"/>
                         <outlet property="webView" destination="M7l-QE-bz0" id="WnG-m9-fq6"/>
-                        <segue destination="yxd-BC-wyg" kind="show" id="zEo-TH-r7J"/>
+                        <segue destination="yxd-BC-wyg" kind="show" identifier="showProductPage" id="zEo-TH-r7J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sur-C9-LP4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -132,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M5k-8N-3yK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2656" y="415"/>
+            <point key="canvasLocation" x="2648.5" y="418.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5ST-hI-260">
