--- a/Bought/Bought/Base.lproj/Main.storyboard
+++ b/Bought/Bought/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1508" y="449"/>
+            <point key="canvasLocation" x="1327.5" y="448.5"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="Mz5-am-3I7">
@@ -109,11 +109,30 @@
                     <connections>
                         <outlet property="dollarAmountField" destination="v4m-Hw-8Bc" id="n9x-5i-4i4"/>
                         <outlet property="webView" destination="M7l-QE-bz0" id="WnG-m9-fq6"/>
+                        <segue destination="yxd-BC-wyg" kind="show" id="zEo-TH-r7J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sur-C9-LP4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2273.5" y="456.5"/>
+            <point key="canvasLocation" x="1951.5" y="442.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qYj-sG-Nca">
+            <objects>
+                <viewController id="yxd-BC-wyg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ziY-xh-hFV"/>
+                        <viewControllerLayoutGuide type="bottom" id="yna-sg-ZJb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Zwe-H1-gqw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M5k-8N-3yK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2656" y="415"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5ST-hI-260">
